[gd_scene load_steps=12 format=3 uid="uid://dfwqe346by81p"]

[ext_resource type="Texture2D" uid="uid://br8ebpoqow0os" path="res://Assets/Enemy2Placeholder.png" id="1_7t2nm"]
[ext_resource type="Script" path="res://World/Characters/Enemies/enemy-2.gd" id="1_y35bj"]
[ext_resource type="PackedScene" uid="uid://cxy1o2wwh7pua" path="res://World/health_component.tscn" id="2_pitb2"]
[ext_resource type="PackedScene" uid="uid://gfl3m0ofwj8o" path="res://World/hitbox_component.tscn" id="3_lkhfq"]

[sub_resource type="Animation" id="Animation_vnte5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ofi3j"]
resource_name = "hit"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_isiqp"]
resource_name = "move"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbbvl"]
_data = {
"RESET": SubResource("Animation_vnte5"),
"hit": SubResource("Animation_ofi3j"),
"move": SubResource("Animation_isiqp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mstv7"]
radius = 30.1963

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oo1qk"]
size = Vector2(20, 6.3661)

[sub_resource type="CircleShape2D" id="CircleShape2D_n5vqv"]
radius = 43.2897

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_y35bj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7t2nm")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lbbvl")
}

[node name="BodyArea" type="Area2D" parent="."]
scale = Vector2(1.09586, 0.475494)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
scale = Vector2(0.241632, 0.420536)
shape = SubResource("CircleShape2D_mstv7")

[node name="HealthComponent" parent="." instance=ExtResource("2_pitb2")]
MAX_HEALTH = 4

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_lkhfq")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 2.10822)
scale = Vector2(1.62332, 1.91898)
shape = SubResource("RectangleShape2D_oo1qk")

[node name="DetectRange" type="Area2D" parent="."]
visible = false
scale = Vector2(3.85633, 2.01658)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
shape = SubResource("CircleShape2D_n5vqv")

[node name="HitRecovery" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="BodyArea" to="." method="_on_body_area_body_entered"]
[connection signal="body_exited" from="BodyArea" to="." method="_on_body_area_body_exited"]
[connection signal="body_entered" from="DetectRange" to="." method="_on_detect_range_body_entered"]
[connection signal="body_exited" from="DetectRange" to="." method="_on_detect_range_body_exited"]
[connection signal="timeout" from="HitRecovery" to="." method="_on_hit_recovery_timeout"]
